added style change on contact-form and form-box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,10 +127,8 @@ div#map {
     background: #ddd;
     box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
     padding: 3rem;
-/*
-    align-items: center;
-    justify-items: center;
-*/
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
 }
 
 .form-box {
@@ -138,6 +136,7 @@ div#map {
     background: #3C4A3E;
     padding: 40px 20px;
     box-sizing: border-box;
+    position: absolute;
     
 }
 
