--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ img {
     font-size: 5.5rem;
     margin-bottom: 20px;
     color: #fafafa;
-    text-shadow: 4px 4px #e12e1e;
+    text-shadow: 2px 2px #e12e1e;
 }
 
 .showbox i {
@@ -128,19 +128,59 @@ div#map {
     box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
     padding: 3rem;
     font-family: Arial, Helvetica, sans-serif;
-    position: relative;
-}
-
-.form-box {
-    width: 320px;
-    background: #3C4A3E;
-    padding: 40px 20px;
-    box-sizing: border-box;
-    position: absolute;
     
 }
 
+.form-box {
+    background: #3C4A3E;
+    padding: 40px 20px;
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+form {
+    padding-top: 70px;
+}
+
+.form-box input {
+    background: none;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    padding: 6px 15px;
+    margin-bottom: 15px;
+    
+}
+
+.form-box textarea {
+    background: none;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #3C4A3E;
+    background-color: #ddd;
+    width: 100%;
+}
+
+button[type="submit"]:hover {
+    background: #05974A;
+    transition: .6s;
+}
+
+.form-box input::placeholder {
+    color: #ddd;
+}
+
+.form-box textarea::placeholder {
+    color: #ddd;
+}
+
 /* Footer */
+
 footer {
     margin-top: 2rem;
     background: #3C4A3E;
