--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 html {
     box-sizing: border-box;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: #3C4A3E;
 }
 
@@ -78,7 +78,7 @@ img {
 
 .carousel-wrapper {
     grid-area: carousel-wrapper;
-    box-shadow: 0 1px 5x rgba(104, 104, 104, 0.8);
+    box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
 }
 
 .carousel-caption {
@@ -116,6 +116,67 @@ img {
 
 .box-down {
     grid-area: box-down;
+}
+
+/* Modal Section */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.7);
+}
+
+.modal-content {
+    background-color: #ddd;
+    color: #3C4A3E;
+    margin: 5% auto;
+    width: 50%;
+    box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+    animation-name: modalopen;
+    animation-duration: 2s;
+}
+
+.modal-header h2 {
+    margin: 0;
+    font-size: 30px;
+}
+
+.modal-header {
+    background: #5e8d01;
+    color: #ddd;
+    padding: 15px;
+}
+
+.modal-body {
+    padding: 10px 20px;
+}
+
+.modal-body p {
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.closeBtn {
+    color: #ddd;
+ /*   float: left; */
+    font-size: 30px;
+}
+
+.closeBtn:hover, .closeBtn:focus {
+    color: #3C4A3E;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+@keyframes modalopen {
+    from{ opacity: 0}
+    to{ opacity: 1};
 }
 
 /* Map Section */
@@ -211,6 +272,20 @@ footer {
     color: #ddd;
     text-align: center;
     padding: 1rem;
+}
+
+footer a {
+    margin: 30px;
+}
+
+footer a i {
+    color: #ddd;
+    transition: all 0.3s linear;
+}
+
+footer a i:hover {
+    color: rgb(249, 253, 16);
+    transform: scale(1.4);
 }
 
 /* Media Queries */
