--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,40 +31,120 @@ img {
     max-width: 100%;
 }
 
-.frame {
+#frame {
     display: grid;
     grid-gap: 20px;
 }
 
 /* Navigation */
 
-.main-nav ul {
-    display: grid;
-    grid-gap: 20px;
-    padding: 0;
-    list-style: none;
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.main-nav a {
+#navbar {
     background: #ddd;
-    display: block;
-    text-decoration: none;
-    padding: 0.8rem;
-    text-align: center;
-    color: #3C4A3E;
-    text-transform: uppercase;
-    font-size: 19px;
-    box-shadow: 0 1px 5x rgba(104, 104, 104, 0.8);
+    box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    z-index: 1;
 }
 
-.main-nav a:hover {
+#navbar h5 {
+    font-size: 50px;
+    display: flex;
+    padding-left: 50px;
+}
+
+#toggle {
+    position: absolute;
+    top: 4px;
+    right: 51px;
+    width: 60px;
+    height: 60px;
     background: #3C4A3E;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.2s;
+}
+
+#toggle:before {
+    content: '';
+    position: absolute;
+    width: 28px;
+    height: 2px;
+    background: #ddd;
+    transform: translateY(-5px);
+    transition: 0.2s;
+}
+
+#toggle:after {
+    content: '';
+    position: absolute;
+    width: 28px;
+    height: 2px;
+    background: #ddd;
+    transform: translateY(5px);
+    transition: 0.2s;
+}
+
+#toggle.active::before {
+    transform: translateY(0px) rotate(45deg);
+}
+
+#toggle.active::after {
+    transform: translateY(0px) rotate(-45deg);
+}
+
+#toggle.active {
+    background: #e12e1e;
+}
+
+#menu {
+    position: relative;
+    height: 60px;
+    right: 111px;
+    background: #5e8d01;
+    transition: 0.5s;
+    width: 0px;
+    overflow: hidden;
+    top: 4px;
+}
+
+#menu.active {
+    width: 660px;
+}
+
+#menu ul {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+}
+
+#menu ul li {
+    list-style: none;
+}
+
+#menu ul li a {
+    color: #3C4A3E;
+    height: 60px;
+    line-height: 60px;
+    display: inline-block;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 0 15px;
+    letter-spacing: 2px;
+    font-weight: bold;
+}
+
+#menu ul li a:hover {
     color: #ddd;
+    background: #e12e1e;
 }
 
 /* Top Container */
-
 
 .top-container {
     display: grid;
@@ -80,24 +160,6 @@ img {
     grid-area: carousel-wrapper;
     box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
 }
-
-.carousel-caption {
-    position: absolute;
-    left: 0;
-    width: 50%;
-    top: 2%;
-    margin-left: 15%;
-    text-align: left;
-}
-
-.carousel-caption h5 {
-    font-weight: bold;
-    color: rgb(249, 253, 16);
-	font-size: 75px;
-	-webkit-text-stroke: 1px #e12e1e;
-	text-shadow: 0px 2px 4px #e12e1e;
-}
-
 /* Top box */
 
 .top-box {
