--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body {
     background-image: linear-gradient(to right bottom, #e12e1e, #bd6000, #907c00, #5e8d01, #05974a);
     margin: 30px 50px;
     line-height: 1.4;
+    
 }
 
 .btn {
@@ -37,6 +38,10 @@ img {
     grid-gap: 20px;
 }
 
+section {
+    position: relative;
+}
+
 /* Navigation */
 
 #navbar {
@@ -44,6 +49,11 @@ img {
     box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
 
 .navigation h5 {
@@ -54,6 +64,7 @@ img {
     font-weight: bold;
     color: #3C4A3E;
     margin: 0;
+    text-shadow:  0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
 }
 
 .navigation h5 img {
@@ -62,8 +73,8 @@ img {
 
 #toggle {
     position: absolute;
-    top: 30px;
-    right: 50px;
+    top: 0;
+    right: 0;
     width: 60px;
     height: 60px;
     background: #3C4A3E;
@@ -151,6 +162,7 @@ img {
 /* Top Container */
 
 .top-container {
+    margin-top: 50px;
     display: grid;
     grid-gap: 20px;
     grid-template-areas:
@@ -181,8 +193,12 @@ img {
     align-items: center;
     justify-items: center;
     box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-    padding: 1rem;
+    padding: 1rem 2rem;
     background: cover;
+}
+
+.top-box i {
+    color:#e12e1e;
 }
 
 .box-up {
@@ -259,6 +275,24 @@ img {
 
 /* Map Section */
 
+#locations {
+    margin-top: 1rem;
+    background: #ddd;
+    color: #3C4A3E;
+    text-align: center;
+    padding: 1rem;
+}
+
+.loc-heading h1 {
+    text-align: center;
+    padding-bottom: 10px;
+    color: #3C4A3E;
+}
+
+.loc-heading h6 {
+    text-align: center;
+}
+
 div#myMap {
     height: 500px;
     width: 100%;
@@ -287,7 +321,8 @@ form {
 
 .form-box h1 {
     text-align: center;
-    padding-bottom: 10px;;
+    padding-bottom: 10px;
+    color: #3C4A3E;
 }
 
 .form-box h6 {
@@ -364,6 +399,13 @@ footer a i:hover {
 
 
     .navigation h5 {
+        font-size: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .navigation h5 img {
         display: none;
     }
     
@@ -373,6 +415,11 @@ footer a i:hover {
         margin: 0 auto;
         max-width: 90%;
     }
+
+    #menu.active {
+        margin: 0 auto;
+    }
+
 }
 
 @media (max-width: 500px) {
@@ -383,4 +430,30 @@ footer a i:hover {
         'box-down';
     }
 
+    .navigation h5 {
+        display: none;
+    }
+
+    #menu ul li a {
+        font-size: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #menu.active {
+        margin: 0;
+    }
+
+    .loc-heading h1 {
+        font-size: 20px;
+    }
+
+    .form-box h1 {
+        font-size: 20px;
+    }
+
+    .form-box h6 {
+        font-size: 12px;
+    }
 }
