--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@ body {
     background-image: linear-gradient(to right bottom, #e12e1e, #bd6000, #907c00, #5e8d01, #05974a);
     margin: 30px 50px;
     line-height: 1.4;
-    
 }
 
 .btn {
@@ -43,7 +42,7 @@ section {
 
 /* Navigation */
 
-#navbar {
+.navbar {
     background: #ddd;
     box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
     display: flex;
@@ -53,9 +52,10 @@ section {
     width: 100%;
     top: 0;
     left: 0;
+    transition: top 0.3s;
 }
 
-.navigation h5 {
+.navbar h5 {
     font-size: 50px;
     display: flex;
     padding-left: 50px;
@@ -66,96 +66,33 @@ section {
     text-shadow:  0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
 }
 
-.navigation h5 img {
+.navbar h5 img {
     padding: 0 10px;
 }
 
-#toggle {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 60px;
-    height: 60px;
-    background: #3C4A3E;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.2s;
+.navbar-custom {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-#toggle:before {
-    content: '';
-    position: absolute;
-    width: 28px;
-    height: 2px;
-    background: #ddd;
-    transform: translateY(-5px);
-    transition: 0.2s;
-}
-
-#toggle:after {
-    content: '';
-    position: absolute;
-    width: 28px;
-    height: 2px;
-    background: #ddd;
-    transform: translateY(5px);
-    transition: 0.2s;
-}
-
-#toggle.active::before {
-    transform: translateY(0px) rotate(45deg);
-}
-
-#toggle.active::after {
-    transform: translateY(0px) rotate(-45deg);
-}
-
-#toggle.active {
-    background: #e12e1e;
-}
-
-#menu {
-    position: relative;
-    height: 60px;
-    right: 60px;
-    background: #ddd;
-    transition: 0.5s;
-    width: 0px;
-    overflow: hidden;
-    top: 0;
-}
-
-#menu.active {
-    width: 400px;
-}
-
-#menu ul {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-}
-
-#menu ul li {
-    list-style: none;
-}
-
-#menu ul li a {
-    color: #3C4A3E;
-    height: 60px;
-    line-height: 60px;
-    display: inline-block;
-    text-decoration: none;
-    font-size: 20px;
-    padding: 0 15px;
-    letter-spacing: 2px;
+#navbarNav .nav-item a {
+    font-size: 18px;
     font-weight: bold;
+    color: #3C4A3E;
 }
 
-#menu ul li a:hover {
-    color: #ddd;
-    background: #e12e1e;
+#navbarNav .nav-item a:hover {
+    background-color: #e12e1e;
+    color: rgb(249, 253, 16);
+}
+
+.ml-auto li{
+    text-align: center;
+    width: 100%;
+    padding-top: 10px;
+}
+
+.navbar, .navbar .navbar-toggler{
+    border: 0px;
 }
 
 /* Top Container */
@@ -390,8 +327,7 @@ footer a i:hover {
             'box-up box-down';
     }
 
-
-    .navigation h5 {
+    .navbar h5 {
         font-size: 25px;
         display: flex;
         justify-content: center;
@@ -403,11 +339,7 @@ footer a i:hover {
         padding-top: 5px;
         margin: 0 auto;
         max-width: 90%;
-    }
-
-    #menu.active {
-        margin: 0 auto;
-    }
+    }  
 }
 
 @media (max-width: 500px) {
@@ -418,22 +350,11 @@ footer a i:hover {
         'box-down';
     }
 
-    .navigation h5 {
+    .navbar h5 {
         font-size: 20px;
         display: flex;
         justify-content: center;
         align-items: center;
-    }
-
-    #menu ul li a {
-        font-size: 15px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #menu.active {
-        margin: 0;
     }
 
     .loc-heading h1 {
@@ -446,16 +367,5 @@ footer a i:hover {
 
     .form-box h6 {
         font-size: 12px;
-    }
-
-    #menu {
-        position: relative;
-        height: 60px;
-        right: 60px;
-        background: #ddd;
-        transition: 0.5s;
-        width: 0px;
-        overflow: hidden;
-        top: 70px;
     }
 }
